# pydra-templateflow

./: .editorconfig  README.md  hatch.toml  pyproject.toml
.github/workflows/: test.yaml
src/pydra/tasks/templateflow/: __init__.py
